--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "katex": "^0.12.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-katex": "^0.5.0",
     "vuex": "^3.4.0",
     "xml2js": "^0.4.23"
   },
