--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-katex": "^0.5.0",
+    "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "xml2js": "^0.4.23"
   },
@@ -25,6 +26,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.4",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
