--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-axios": "^2.1.5",
     "vue-katex": "^0.5.0",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
     "xml2js": "^0.4.23"
   },
@@ -37,6 +38,8 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
